// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test ShapePanel in mobile should render correctly 1`] = `
<div>
  <div
    class="adm-floating-panel panel"
    data-animating="false"
    style="height: 627px; transform: translateY(calc(100% + (-627px)));"
  >
    <div
      class="adm-floating-panel-mask"
      style="display: none;"
    />
    <div
      class="adm-floating-panel-header"
    >
      <div
        class="adm-floating-panel-bar"
      />
    </div>
    <div
      class="adm-floating-panel-content"
    >
      <span
        class="anticon close-icon"
        role="img"
        tabindex="-1"
      >
        <svgr-url
          aria-hidden="true"
          classname=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        />
      </span>
      <div
        class="title"
      >
        Elements
      </div>
      <div
        class="adm-capsule-tabs tabs"
      >
        <div
          class="adm-capsule-tabs-header"
        >
          <div
            class="adm-scroll-mask adm-scroll-mask-left"
            style="opacity: 0;"
          />
          <div
            class="adm-scroll-mask adm-scroll-mask-right"
            style="opacity: 0;"
          />
          <div
            class="adm-capsule-tabs-tab-list"
          >
            <div
              class="adm-capsule-tabs-tab-wrapper"
            >
              <div
                class="adm-capsule-tabs-tab adm-capsule-tabs-tab-active"
              >
                Shape
              </div>
            </div>
            <div
              class="adm-capsule-tabs-tab-wrapper"
            >
              <div
                class="adm-capsule-tabs-tab"
              >
                Graphics
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="scroll-content"
      >
        <div
          class="icon-list"
        >
          <span
            class="anticon icon"
            role="img"
            tabindex="-1"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 50 50"
              width="1em"
            >
              mock-svg
            </svg>
          </span>
          <span
            class="anticon icon"
            role="img"
            tabindex="-1"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 50 50"
              width="1em"
            >
              mock-svg
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test ShapePanel should render correctly 1`] = `
<body>
  <div
    class="adm-px-tester"
    style="--size: 10;"
  />
  <div
    class="adm-px-tester"
  />
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 420px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close ant-modal-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                Elements
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <div
                class="adm-capsule-tabs tabs"
              >
                <div
                  class="adm-capsule-tabs-header"
                >
                  <div
                    class="adm-scroll-mask adm-scroll-mask-left"
                    style="opacity: 0;"
                  />
                  <div
                    class="adm-scroll-mask adm-scroll-mask-right"
                    style="opacity: 0;"
                  />
                  <div
                    class="adm-capsule-tabs-tab-list"
                  >
                    <div
                      class="adm-capsule-tabs-tab-wrapper"
                    >
                      <div
                        class="adm-capsule-tabs-tab adm-capsule-tabs-tab-active"
                      >
                        Shape
                      </div>
                    </div>
                    <div
                      class="adm-capsule-tabs-tab-wrapper"
                    >
                      <div
                        class="adm-capsule-tabs-tab"
                      >
                        Graphics
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="shadow-container"
              >
                <div
                  class="scroll-content"
                >
                  <div
                    class="icon-list"
                  >
                    <span
                      class="anticon icon"
                      role="img"
                      tabindex="-1"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        viewBox="0 0 50 50"
                        width="1em"
                      >
                        mock-svg
                      </svg>
                    </span>
                    <span
                      class="anticon icon"
                      role="img"
                      tabindex="-1"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        viewBox="0 0 50 50"
                        width="1em"
                      >
                        mock-svg
                      </svg>
                    </span>
                  </div>
                </div>
                <div
                  class="shadow"
                  style="display: none;"
                />
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
